--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/supabase-js": "^2.57.0",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
     "geist": "^1.2.1",
     "lucide-react": "^0.456.0",
-    "next": "latest",
+    "next": "^15.5.2",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "18.3.1",
