--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "^2.57.0",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.6",
     "@upstash/search": "^0.1.6",
     "@upstash/search-ui": "^0.1.5",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
-    "fuse.js": "^7.1.0",
     "geist": "^1.2.1",
     "lucide-react": "^0.456.0",
     "next": "^15.5.2",
