--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 node_modules
 .next
 .env*
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
