--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.456.0",
     "next": "^15.5.2",
     "next-themes": "^0.4.3",
+    "nodemailer": "^6.10.1",
     "prettier": "^3.3.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
