--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "lucide-react": "^0.456.0",
     "next": "^15.5.2",
     "next-themes": "^0.4.3",
-    "nodemailer": "^6.10.1",
     "prettier": "^3.3.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "resend": "^6.5.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
