--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@databuddy/sdk": "^2.2.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.2.6",
@@ -23,6 +24,7 @@
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "framer-motion": "^11.13.1",
     "geist": "^1.2.1",
     "lucide-react": "^0.456.0",
