--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "geist": "^1.2.1",
     "lucide-react": "^0.456.0",
     "next": "15.5.9",
+    "next-intl": "^3.22.4",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "18.3.1",
