--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "playwright test"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^3.0.1",
     "@databuddy/sdk": "^2.2.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -21,6 +22,7 @@
     "@upstash/redis": "^1.35.6",
     "@upstash/search": "^0.1.6",
     "@upstash/search-ui": "^0.1.5",
+    "ai": "^6.0.3",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
